--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,84 @@
-node_modules
+# ----------------------------
+# Dependencies
+# ----------------------------
+node_modules/
+.pnp
+.pnp.js
+
+# ----------------------------
+# Next.js
+# ----------------------------
+.next/
+out/
+build/
+.next/cache/
+
+# ----------------------------
+# Production
+# ----------------------------
+dist/
+
+# ----------------------------
+# Logs
+# ----------------------------
+logs
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
+
+# ----------------------------
+# Environment Variables
+# ----------------------------
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# ----------------------------
+# Sanity Studio
+# ----------------------------
+.sanity/
+.sanity/*
+sanity/node_modules/
+sanity/.cache/
+sanity/dist/
+
+# ----------------------------
+# Tailwind
+# ----------------------------
+# (No special ignore needed usually)
+
+# ----------------------------
+# Vercel
+# ----------------------------
+.vercel
+
+# ----------------------------
+# TypeScript
+# ----------------------------
+*.tsbuildinfo
+
+# ----------------------------
+# OS Files
+# ----------------------------
+.DS_Store
+Thumbs.db
+
+# ----------------------------
+# IDE / Editor
+# ----------------------------
+.vscode/
+.idea/
+
+# ----------------------------
+# Coverage
+# ----------------------------
+coverage/
+
+# ----------------------------
+# Temporary files
+# ----------------------------
+*.swp
