--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "19.2.3",
     "react-countup": "^6.5.3",
     "react-dom": "19.2.3",
+    "react-intersection-observer": "^10.0.3",
     "sanity": "^4.22.0",
     "styled-components": "^6.3.10",
     "swiper": "^12.1.1"
